@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.gff3.Manager">
-        <property name="version" value="--Gff3 generation pipeline -- build Nov 26, 2019 --" />
+        <property name="version" value="--Gff3 generation pipeline -- build Jan 08, 2020 --" />
     </bean>
 
     <bean id="qtlManager" class="edu.mcw.rgd.gff3.CreateGff4QTL">
