@@ -71,3 +71,31 @@ log4j.appender.domains.Append=true
 log4j.appender.domains.File=logs/domains.log
 log4j.appender.domains.layout=org.apache.log4j.PatternLayout
 log4j.appender.domains.layout.ConversionPattern=%m%n
+
+
+# promoters logger
+log4j.logger.promoters=debug, promoters_detail, promoters_summary, promoters
+
+log4j.appender.promoters_detail.Threshold=DEBUG
+log4j.appender.promoters_detail=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.promoters_detail.DatePattern='.'yyyy-MM
+log4j.appender.promoters_detail.Append=true
+log4j.appender.promoters_detail.File=logs/promoters_detail.log
+log4j.appender.promoters_detail.layout=org.apache.log4j.PatternLayout
+log4j.appender.promoters_detail.layout.ConversionPattern=[%d] - %m%n
+
+log4j.appender.promoters_summary.Threshold=INFO
+log4j.appender.promoters_summary=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.promoters_summary.DatePattern='.'yyyy-MM
+log4j.appender.promoters_summary.Append=true
+log4j.appender.promoters_summary.File=logs/promoters_summary.log
+log4j.appender.promoters_summary.layout=org.apache.log4j.PatternLayout
+log4j.appender.promoters_summary.layout.ConversionPattern=[%d] - %m%n
+
+log4j.appender.promoters.Threshold=INFO
+log4j.appender.promoters=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.promoters.DatePattern='.'yyyy-MM-dd
+log4j.appender.promoters.Append=true
+log4j.appender.promoters.File=logs/promoters.log
+log4j.appender.promoters.layout=org.apache.log4j.PatternLayout
+log4j.appender.promoters.layout.ConversionPattern=%m%n
